--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -91,8 +91,10 @@
                     <button>Gráfico 4</button>
                 </div>
                 <div id="grafico1" class="display-block">
+                    <h3 style="color: white;">Consulte as informações abaixo do gráfico!</h3>
                     <canvas id="myChartCanvas1"></canvas>
                     <!-- Criação de elementos para realizar a mudança no tipo de gráfico -->
+                    <h3 style="color: white;">Este gráfico exibe as últimas 10 tentativas que Você realizou no quiz!</h3>
                     <div class="label-captura">
                     Tipo de gráfico: <button onclick="session('line')">Linha</button><button onclick="session('bar')">Barra</button><button onclick="session('pie')">Pizza</button>
                     </div>
