--- a/public/dashboard/dashEstQuiz.html
+++ b/public/dashboard/dashEstQuiz.html
@@ -87,8 +87,8 @@
                     <!-- Criação de função externa para mudar rotas -->
                     <button style="margin-top: 30px;" onclick="rotaGraf('quiz')">Quiz</button>
                     <button onclick="rotaGraf('game')">YourTricks Game</button>
-                    <button onclick="rotaGraf('rakQuiz')">Ranking Quiz</button>
-                    <button>Gráfico 4</button>
+                    <button onclick="rotaGraf('rankQuiz')">Ranking Quiz</button>
+                    <button onclick="rotaGraf('rankGame')">Ranking Game</button>
                 </div>
                 <div id="grafico1" class="display-block">
                     <h3 style="color: white;">Consulte as informações abaixo do gráfico!</h3>
@@ -137,10 +137,6 @@
         function plotarGrafico(dadosRecebidos) {
             console.log('Iniciando plotagem do gráfico...');
 
-            // Verificando se há menos de 10 registros
-            if (dadosRecebidos.length < 10) {
-                alert("Você tem menos de 10 tentativas. Exibindo todas as tentativas disponíveis.");
-            }
 
             // Criando estrutura para plotar gráfico - labels e dados
             // Rótulo que sera inserido no gráfico, no caso indíce da tentativa + 1;
