--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -98,6 +98,7 @@
                     <div class="label-captura">
                     Tipo de gráfico: <button onclick="session('line')">Linha</button><button onclick="session('bar')">Barra</button><button onclick="session('pie')">Pizza</button>
                     </div>
+                    <div class="minMax"><h2 id="maxPont">Maior pontuação: </h2><h2 id="minPont">Menor pontuação: </h2></div>
                 </div>
             </div>
         </div>
@@ -108,6 +109,8 @@
 
         let idUser = sessionStorage.ID_USUARIO;
         let typeGraf = sessionStorage.typeGraf == undefined ? 'line' : sessionStorage.typeGraf;
+        let maiorPont = 0;
+        let menorPont = undefined;
 
         function obterDadosGrafico() {
             fetch(`/quiz/obterDados`, {
@@ -149,6 +152,15 @@
             // Rótulo que sera inserido no gráfico, no caso indíce da tentativa + 1;
             const labels = dadosRecebidos.map((registro, index) => `Tentativa:${index + 1}`);
             const dataPoints = dadosRecebidos.map(registro => registro.pontuation);
+
+            menorPont = dadosRecebidos[0].pontuation;
+            dadosRecebidos.forEach(element => {
+                maiorPont = element.pontuation > maiorPont ? element.pontuation : maiorPont;
+                menorPont = element.pontuation < menorPont ? element.pontuation : menorPont;
+            });
+
+            maxPont.innerHTML += maiorPont;
+            minPont.innerHTML += menorPont;
 
             console.log('----------------------------------------------');
             console.log('Dados recebidos:');
