Estilização de informativo no quiz

--- a/public/dashboard/quiz.html
+++ b/public/dashboard/quiz.html
@@ -85,6 +85,7 @@
         <div class="dash">
             <div class="quizContainer">
                 <h1>Teste seus conhecimentos sobre skate!</h1>
+                <h2>O quiz é composto por 10 perguntas sobre o mundo do skate.</h2>
                 .
                 <div class="questionContainer">
                     <h2 class="marginQuiz">Questão 1</h2>
