Adição de seção histórico no menu

--- a/public/dashboard/dashEstGame.html
+++ b/public/dashboard/dashEstGame.html
@@ -89,6 +89,7 @@
                     <button onclick="rotaGraf('game')">YourTricks Game</button>
                     <button onclick="rotaGraf('rankQuiz')">Ranking Quiz</button>
                     <button onclick="rotaGraf('rankGame')">Ranking Game</button>
+                    <button onclick="rotaGraf('hist')">Histórico</button>
                 </div>
                 <div id="grafico1" class="display-block">
                     <h3 style="color: white;">Consulte as informações abaixo do gráfico!</h3>
