--- a/public/index.html
+++ b/public/index.html
@@ -2,89 +2,114 @@
 <html lang="ptBr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>YourTricks | Página Inicial</title>
+  <title>YourTricks | Página Inicial</title>
 
-    <script src="./js/sessao.js"></script>
+  <script src="./js/sessao.js"></script>
 
-    <link rel="stylesheet" href="./css/estilo.css">
+  <link rel="stylesheet" href="./css/estilo.css">
 
-    <link rel="icon" href="./assets/icon/logoSite.png">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="icon" href="./assets/icon/logoSite.png">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 
-<body>
-    <div class="header">
-      <div class="container">
-        <h1 class="titulo">YourTricks</h1>
-        <ul class="navbar">
-          <li class="agora">
-            <a href="#">Inicial</a>
-          </li>
-          <li>
-            <a onclick="valid()" style="cursor: pointer;">Quiz</a>
-          </li>
-          <li>|</li>
-          <li>
-            <a href="login.html">Login</a>
-          </li>
-          <li>
-            <a href="cadastro.html">Cadastro</a>
-          </li>
-        </ul>
-      </div>
+<body onload="totalUser()">
+  <div class="header">
+    <div class="container">
+      <h1 class="titulo">YourTricks</h1>
+      <ul class="navbar">
+        <li class="agora">
+          <a href="#">Inicial</a>
+        </li>
+        <li>
+          <a onclick="valid()" style="cursor: pointer;">Quiz</a>
+        </li>
+        <li>|</li>
+        <li>
+          <a href="login.html">Login</a>
+        </li>
+        <li>
+          <a href="cadastro.html">Cadastro</a>
+        </li>
+      </ul>
     </div>
-  
-    <div class="banner">
-      <div class="container">
-        <p>Incentivando <span>hoje</span> para se criar skatistas <span>amanhã</span>.</p>
-      </div>
+  </div>
+
+  <div class="banner">
+    <div class="container">
+      <p>Incentivando <span>hoje</span> para se criar skatistas <span>amanhã</span>.</p>
     </div>
-  
-    <div class="social">
-      <div class="container">
-        <div class="boxes">
-          <div class="box">
-            <img src="./assets/imgs/sobreNos/missao.png">
-            <h4>Missão</h4>
-            <p>Incentivar o movimento do Skate no Brasil, buscandp cada vez mais furar a bolha do mundo do skate e 
-              assim atrair mais pessoas para o movimento</p>
-          </div>
-          <div class="box">
-            <img src="assets/imgs/binoculos.png">
-            <h4>Visão</h4>
-            <p>Acredito que o skate mudou e pode mudar a vida de muitas pessoas, conseguindo ser utilizado como uma distração
-              e momento de lazer e saúde</p>
-          </div>
-          <div class="box">
-            <img src="assets/imgs/sobreNos/valores.png">
-            <h4>............................</h4>
-            <h4>Valores</h4>
-            <p>Promover um ambiente acolhedor e acessível a todos, independente de idade, também desenvolver uma maior igualdade e 
+  </div>
+
+  <div class="social">
+    <div class="container">
+      <div class="boxes">
+        <div class="box">
+          <img src="./assets/imgs/sobreNos/missao.png">
+          <h4>Missão</h4>
+          <p>Incentivar o movimento do Skate no Brasil, buscandp cada vez mais furar a bolha do mundo do skate e
+            assim atrair mais pessoas para o movimento</p>
+        </div>
+        <div class="box">
+          <img src="assets/imgs/binoculos.png">
+          <h4>Visão</h4>
+          <p>Acredito que o skate mudou e pode mudar a vida de muitas pessoas, conseguindo ser utilizado como uma
+            distração
+            e momento de lazer e saúde</p>
+        </div>
+        <div class="box">
+          <img src="assets/imgs/sobreNos/valores.png">
+          <h4>............................</h4>
+          <h4>Valores</h4>
+          <p>Promover um ambiente acolhedor e acessível a todos, independente de idade, também desenvolver uma maior
+            igualdade e
             respeito dentro da comunidade do skate.</p>
-          </div>
         </div>
       </div>
     </div>
-  
-    <div class="footer">
-      <div class="container">
-        <h4>Desenvolvido por Raul Gomes Reis - 1CCOA SPTech &copy; 2024</h4>
-        <span class="version">v1.0.0</span>
-      </div>
+  </div>
+
+  <div class="footer">
+    <div class="container">
+      <h4>Desenvolvido por Raul Gomes Reis - 1CCOA SPTech &copy; 2024</h4>
+      <span class="version">v1.0.0</span>
     </div>
-  </body>
+  </div>
+</body>
 
 </html>
 
 <script>
-  function valid(){
+  function valid() {
     alert('Faça seu login ou cadastro primeiro');
-    setTimeout(()=>{
+    setTimeout(() => {
       window.location.href = './login.html'
     }, 1000);
+  }
+
+  function totalUser() {
+    fetch('/usuarios/allUser', {
+      method: 'GET',
+      headers: {
+        "Content-Type": "application/json"
+      }
+    }).then(response => {
+      if (response.status === 200) {
+        return response.json(); // Converte a resposta para JSON
+      } else if (response.status === 204) {
+        sessionStorage.totalUser = '0';
+        throw new Error('Nenhum resultado encontrado!');
+      } else {
+        throw new Error('Erro ao buscar dados!');
+      }
+    }).then(data => {
+      sessionStorage.totalUser = data.data;
+      alert(data.data);
+    }).catch(error => {
+      alert('Problema ao requisitar usuários! ' + error);
+    });
   }
 </script>
