adição de comentários de atualização

--- a/public/index.html
+++ b/public/index.html
@@ -90,6 +90,7 @@
     }, 1000);
   }
 
+  // Fetch para a busca de quantidade de usuários 26/07/2024
   function totalUser() {
     fetch('/usuarios/allUser', {
       method: 'GET',
