--- a/public/login.html
+++ b/public/login.html
@@ -36,6 +36,7 @@
         </div>
     </div>
 
+    <!-- Elemento para exibir a quantidade de usuários 26/07/2024 -->
     <div id="totalUser">Total de Usuarios: </div>
 
     <div class="login">
